--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -22,15 +22,26 @@
             <tr>
                 <th>Category Name</th>
                 <th>Diplay Order</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var category in Model.OrderBy(c => c.DisplayOrder))
             {
-            <tr>
-                <td>@category.Name</td>
-                <td>@category.DisplayOrder</td>
-            </tr>
+                <tr>
+                    <td>@category.Name</td>
+                    <td>@category.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-categoryId="@category.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-fill"></i> Edit
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-categoryId="@category.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash-fill"></i>Delete
+                            </a>
+                        </div>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
