--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -18,7 +18,6 @@
     </div>
     <table class="table tatable-bordered table-striped">
         <thead>
-
             <tr>
                 <th>Category Name</th>
                 <th>Diplay Order</th>
@@ -33,10 +32,10 @@
                     <td>@category.DisplayOrder</td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-categoryId="@category.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-fill"></i> Edit
                             </a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-categoryId="@category.Id" class="btn btn-danger mx-2">
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i>Delete
                             </a>
                         </div>
